--- a/index.html
+++ b/index.html
@@ -6,13 +6,18 @@
     <title>CSS Generator Tool</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect width='100' height='100' fill='%23667eea'></rect><text y='.9em' font-size='90'>🎨</text></svg>" />
     <link rel="stylesheet" href="style.css" />
+    <style>
+      .container {
+        max-width: 95%;
+      }
+    </style>
   </head>
   <body>
     <div class="container">
       <div class="header">
         <h1>🎨 CSS Generator Tool</h1>
         <button class="tutorial-toggle">Tutorial Mode: OFF</button>
-        <button class="full-width-toggle">Full-Width Mode: OFF</button>
+        <!--<button class="full-width-toggle">Full-Width Mode: OFF</button> -->
       </div>
 
       <div class="main-content">
